# rag-scanner

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  start.bat  start.sh  sync-rules.sh  vercel.json
.github/workflows/: sync-rules.yml
api/: __init__.py  admin.py  health.py  hello.py  report.py  scan.py
api/admin/: __init__.py  detail.py  history.py  in_progress.py  logs.py  main.py  stats.py  tasks.py
api/lib/: __init__.py  db.py
api/report/: __init__.py  download.py  generate.py
api/scan/: execute.py  parse_curl.py  progress.py  result.py  submit.py
api/scanner/: __init__.py  engine.py  rules_loader.py  scorer.py
app/: __init__.py  config.py  extensions.py  models.py  report_generator.py
app/routes/: __init__.py  admin.py  pages.py  report.py  scan.py
docs/: 2026-05-11 周计划.md  2026-05-19 周计划.md  2026-05-26 周计划.md  RAGShield.code-workspace  admin.html  admin.js  app.js  index.html  pdf-report.js  style.css
frontend/: README.md  app.js
lib/: __init__.py  blob.py  db.py  kv.py  models.py  persistence.py
scanner/: __init__.py  curl_parser.py  engine.py  format_detector.py  rules_loader.py  scorer.py
scripts/: .env.template  auto_test.py  run_test.bat  vercel_deploy.py
tests/: __init__.py  conftest.py  test_api.py  test_detectors.py  test_engine.py  test_flow.py  test_health.py  test_live_regression.py  test_scorer.py
utils/: file_operations_standard.py  file_utils.py  pdf_generator.py
wordlists/: api_params.txt  prompt_injection.txt
(+49 files in other folders)
